# RhymeLM

./: .gitignore  HOW_TO_USE.md  LICENSE  README.md  RhymeLM_v2.ipynb  artist_profiles.json  dashboard.py  generate.py  pyproject.toml  requirements.txt  train.py  train_big.py  visualize.py
configs/: lstm_attention.yaml  lstm_base.yaml  lstm_original.yaml  lstm_phoneme.yaml  transformer_bpe.yaml  transformer_bpe_test.yaml  transformer_char.yaml
notebooks/: 01_train_lstm.ipynb  02_evaluate_and_visualize.ipynb
rhymelm/: __init__.py  config.py  utils.py
rhymelm/cli/: generate.py  train.py
rhymelm/data/: __init__.py  augment_data.py  bpe.py  corpus.py  dataset.py  genius_scraper.py  lyrics_fetcher.py  phonemes.py  scrape_web.py  tokenizer.py
rhymelm/evaluation/: ablation.py  comparison.py  interpretability.py  metrics.py
rhymelm/generation/: artist_style.py  originality.py  rhyme_sampler.py  sampler.py
rhymelm/models/: __init__.py  base.py  lstm.py  lstm_attention.py  lstm_phoneme.py  transformer.py
rhymelm/rag/: __init__.py  generator.py  index.py  profiler.py  retriever.py  rhyme_processor.py  schemes.py
rhymelm/training/: experiment.py  finetune.py  hf_finetune.py  lora.py  phoneme_trainer.py  trainer.py  transformer_trainer.py
rhymelm/visualization/: attention_viz.py  embedding_viz.py  training_plots.py
