[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rhymelm"
version = "3.0.0"
description = "Retrieval-augmented rap verse generation with FAISS + GPT-2 XL"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.41",
    "sentence-transformers",
    "faiss-cpu",
    "pandas",
    "numpy",
    "nltk",
    "tqdm",
    "matplotlib",
    "pyyaml",
    "beautifulsoup4",
    "requests",
    "gradio>=4.0",
]

[project.optional-dependencies]
viz = ["umap-learn", "scikit-learn"]
dev = ["jupyter", "ipywidgets"]
peft = ["peft>=0.10", "accelerate"]

[project.scripts]
rhymelm-train = "rhymelm.cli.train:main"
rhymelm-generate = "rhymelm.cli.generate:main"

[tool.setuptools.packages.find]
include = ["rhymelm*"]
